# project-demo

./: .gitignore  note-docker.md
Core/: .gitignore  README.md  pyproject.toml  requirements.txt
Core/sql/: dump-pinfor-202409172247.sql
Core/src/: .env.example  containers.py  decorators.py  dependencies.py  main.py  setting.py
Core/src/core/: __init__.py  error.py  logger.py  message.py  repository.py
Core/src/crm_shop/: repository.py  services.py
Core/src/crm_shop_account/: repository.py  services.py
Core/src/db/: database.py
Core/src/gencbar/: addr2code.py  gencbar.py
Core/src/helpers/: __init__.py  common.py  const.py  cookie.py  jwt.py  kbn.py  response.py  sms.py  smtp_mail.py
Core/src/mail_template/: add_postcard_flyer.py  admin_manager_edit.py  admin_manager_register.py  admin_owner_edit.py  admin_owner_register.py  admin_staff_edit.py  admin_staff_register.py  auth_two_step.py  edit.py  no_max_alert.py  register.py  shop_forgot_password.py  shop_login_notify.py  shop_reset_password.py
Core/src/models/: __init__.py  action_calendars.py  action_delivery_status.py  action_delivery_status_confirmed.py  action_details.py  action_types.py  actions.py  addresses.py  administrators.py  batch_schedules.py  batches.py  condition_filters.py  customer_informations.py  customer_notification_status.py  customer_notifications.py  customer_tag_details.py  customer_tags.py  customers.py  customers_temporary.py  entity_base.py  payment_methods.py  point_histories.py  setting_ranks.py  shop_accounts.py  shop_notification_status.py  shop_notifications.py  shop_settings.py  shops.py  site_configs.py  templates.py  user.py  users.py
Recruit/RecruitApi/: .pylintrc  pyproject.toml
(+852 files in other folders)
