[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = "FastApi Project"
authors = ["SSV <ssv@saisystem.vn>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "0.19.0"
gunicorn = "20.1.0"
fastapi = "0.85.2"
PyJWT = "2.6.0"
boto3 = "1.26.0"
simplejson = "3.17.6"
pytz = "2022.6"
SQLAlchemy = "1.4.42"
mysqlclient = "2.1.1"
python-dotenv = "0.21.0"
pydantic = "1.10.2"
requests = "2.28.1"
tomlkit = "0.11.6"
dependency-injector = "4.40.0"
watchtower = "3.0.0"
python-json-logger = "2.0.4"
bcrypt = "4.0.1"
python-box = "^6.1.0"
reportlab = "^3.6.12"
fastapi-mail = "1.1.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
